# led-gen

./: .gitignore  Cargo.toml  README.md  led-gen.config.toml.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
.github/workflows/: release-cli.yml  release-npm.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: package.json
crates/led-gen-cli/: Cargo.toml  README.md
crates/led-gen-cli/src/: main.rs  utils.rs
crates/led-gen-core/: Cargo.toml
crates/led-gen-core/src/: lib.rs
crates/led-gen-wasm/: Cargo.toml  README.md
crates/led-gen-wasm/src/: lib.rs
src/cli/: Cargo.toml  readme.md
src/cli/src/: main.rs  utils.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/wasm/: Cargo.toml  LICENSE_MIT  README.md
src/wasm/src/: lib.rs
ts/: LICENSE  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  tsup.config.ts
ts/src/: index.ts
