[package]
name = "led-gen-core"
version = "0.2.1"
edition = "2024"

[features]
cli = ["clap"]

[dependencies]
image = "0.25.10"
rayon = "1.12.0"
tiny-skia = "0.12.0"
clap = { version = "4.4", features = ["derive"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tsify = "0.5.6"
wasm-bindgen = "0.2.84"
